# gitmgr

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml  release.yml
docs/: RELEASE.md
lib/libgitmgr/: Cargo.toml  README.md
lib/libgitmgr/src/: lib.rs
scripts/: release-version.sh
