[workspace]
members = ["bin/gitmgr", "bin/xtask", "lib/libgitmgr"]
default-members = ["bin/gitmgr"]
resolver = "2"

[workspace.package]
authors = ["Triet Trinh <contact@trinhminhtriet.com>"]
edition = "2021"
homepage = "https://trinhminhtriet.com"
license = "MIT"
repository = "https://github.com/trinhminhtriet/gitmgr"

[profile.release.package.gitmgr]
codegen-units = 1
opt-level = 3
strip = true

[profile.release]
lto = true
panic = "abort"

[workspace.dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
env_logger = { version = "0.11", features = ["humantime"], default_features = false }
git2 = { version = "0.20", default_features = false }
log = "0.4"
pretty_assertions = "1.4"
rayon = "1.11"
remain = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.26", features = ["derive"] }
tempfile = "3.23"
termcolor = "1.4"
thiserror = "1.0"
toml = "0.8"